--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
