--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ps5-controller-3d",
-  "version": "0.3.0",
+  "name": "online-controller-tester",
+  "version": "0.5.0",
   "private": true,
   "author": "KevzPeter",
-  "repository": "https://github.com/KevzPeter/PS5-Controller-Tester",
+  "repository": "https://github.com/KevzPeter/Online-Controller-Tester",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
