--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "online-controller-tester",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "private": true,
   "author": "KevzPeter",
   "repository": "https://github.com/KevzPeter/Online-Controller-Tester",
@@ -11,7 +11,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-three/drei": "^9.105.4",
