--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "three": "^0.163.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
